# Trade-Sage

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: config.py
backend/app/db/: database.py  models.py
backend/app/prompts/: system.py
backend/app/routers/: chat.py  dashboard.py  market.py  news.py  portfolio.py  recommendations.py  watchlist.py
backend/app/services/: csv_parser.py  llm.py  market_data.py  news.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: client.js
frontend/src/components/dashboard/: MarketPulse.vue  PortfolioSummary.vue  RecentRecs.vue
frontend/src/components/layout/: PageHeader.vue  Sidebar.vue
frontend/src/composables/: useChat.js  useDashboard.js  useMarket.js  usePortfolio.js  usePrivacy.js  useRecommendations.js  useWatchlist.js
frontend/src/router/: index.js
frontend/src/utils/: format.js
frontend/src/views/: Chat.vue  Dashboard.vue  Market.vue  Portfolio.vue  Recommendations.vue  Watchlist.vue
