[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "openrouter>=0.9.1",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
    "yfinance>=1.3.0",
]
